# ApplyKit

./: .gitignore  COWORK_SCHEDULED_TASK.md  LICENSE  README.md  SESSION-HANDOFF.md  commit_and_push.sh  pyproject.toml
applykit/: __init__.py  cli.py  config.py  crafter.py  db.py  evaluator.py  feedback.py  jd_parser.py  models.py  pipeline.py  ranking.py  report.py  scout.py  tracker.py
config/: config.yml.example  defaults.yml
context/: profile.md.example
docs/: ADR-001-architecture.md  PRD.md  PRFAQ.md
launch-skill/: SKILL.md
launch-skill/references/: role-personas.md
scripts/: read_scores.py  write_feedback.py
skill/: SCHEDULED_SKILL.md  SKILL.md
tests/: conftest.py  test_config.py  test_db.py  test_evaluator.py  test_feedback.py  test_jd_parser.py  test_models.py  test_ranking.py  test_tracker.py
