[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "applykit"
version = "0.1.0"
description = "A scheduled job-search pipeline: Scout -> Score -> Rank -> Craft -> Apply."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jeff Watson" }]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Parsing JD files and fetching career pages.
parse = [
    "requests>=2.31",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
]
# Standalone CLI scoring/crafting via the Anthropic API.
standalone = [
    "anthropic>=0.39",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
applykit = "applykit.cli:main"

[tool.setuptools.packages.find]
include = ["applykit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
